[tool.poetry]
name = "linpxdens"
version = "0.0.0"
description = "linpxdens (Linear pixel density) is a Python package for analyzing geometric line structures and spacing patterns in images. It provides tools for line fitting, center estimation, outlier filtering, and periodic pattern analysis based on image data. From the periodic structure, the linear pixel density is calculated."
authors = ["Clemens Trunner"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.9"
opencv-python = "^4.12.0.88"
matplotlib = "^3.10.5"
numpy = "^2.2.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
